testdata/zkc/invalid/basic_invalid_04.zkc
;;error:2:8-11:unknown type
fn f(x:int) -> (r:u8) {
  r = 0
  return
}
